<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Productos Frescos S.A.</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_section1">Administrar Clientes</string>
    <string name="title_section2">Entrega Pedidos</string>
    <string name="title_section3">Resumen Caja</string>
    <string name="navigation_drawer_open">Abrir menu</string>
    <string name="navigation_drawer_close">Cerrar Menu</string>
    <string name="accion">Example action</string>
    <string name="title_activity_admin_cliente">AdminClienteActivity</string>
    <string name="title_activity_entrega_pedido">EntregaPedidoActivity</string>
    <string name="title_activity_resumen_caja">ResumenCajaActivity</string>
    <string name="title_activity_agregar_cliente">AgregarClienteActivity</string>
    <string name="title_activity_modificar_cliente">ModificarClienteActivity</string>
    <string name="title_activity_ubicacion">UbicacionActivity</string>
    <string name="title_activity_mi_ruta">MiRutaActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_inicio">Productos Frescos S.A.</string>
    <!-- Vista login -->
    <string name="titulo_login">Bienvenidos: acceso usuario</string>
    <string name="usuario_login">Usuario</string>
    <string name="password_login">Contraseña</string>
    <string name="btn_login">Conectar</string>
    <!-- Vista menu -->
	<string name="titulo_menu">Menu principal</string>
	<string name="btn_admin_clien_menu">Administrar clientes</string>
	<string name="btn_entre_pedi_menu">Entrega pedido</string>
	<string name="btn_resum_caja_menu">Resúmen Caja</string>
	<string name="btn_donde_menu">Dónde estoy?</string>
	<string name="btn_mi_ruta_menu">Mi Ruta</string>
	<!--  Vista admin cliente -->
    <string name="titulo_admin_cliente">Administrador de clientes</string>
    <string name="btn_agregar_admin_cliente">Agregar cliente</string>
	<!-- Vista agregar Cliente -->
	<string name="titulo_agreg_cliente">Agregar Cliente</string>
	<string name="id_agreg_cliente">Id Cliente</string>
    <string name="nombre_agreg_cliente">Nombre</string>
    <string name="empresa_agreg_cliente">Id Cliente</string>
    <string name="btn_agreg_cliente">Agregar cliente</string>
    <!-- Vista Entrega de pedidos -->
    <string name="titulo_entr_pedi">Registro entrega de pedidos</string>
    <string name="cliente_entr_pedi">Cliente</string>
    <string name="producto_entr_pedi">Producto</string>
    <string name="cantidad_entr_pedi">Cantidad</string>
    <string name="fecha_entr_pedi">Fecha entrega</string>
	<string name="precio_entr_pedi">Precio</string>
	<string name="btn_registro_entr_pedi">Registrar</string>
	<!-- Vista modificar Cliente -->
	<string name="titulo_mod_cliente">Modificar cliente</string>
	<string name="id_mod_cliente">Id Cliente</string>
	<string name="nombre_mod_cliente">Nombre</string>
	<string name="empresa_mod_cliente">Empresa</string>
	<string name="btn_modif_mod_cliente">Modificar Cliente</string>
	<string name="btn_elim_mod_cliente">Eliminar Cliente</string>
	<!-- Vista Resúmen Caja -->
	<string name="titulo_resum_caja">Resumen caja</string>
	<string name="producto_resum_caja">Producto</string>
	<string name="btn_consul_resum_caja">Consultar</string>
	<!-- Vista ubicacion -->
	<string name="titulo_ubica">Ubicación...</string>
	
	
    
</resources>
