<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@drawable/splash_fondo"
        tools:context="cl.inacap.tarea.ModificarClienteActivity" >

        <TextView
            android:id="@+id/tvModificar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_mod_cliente"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/tvIdCliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_mod_cliente" />

        <EditText
            android:id="@+id/etCliente_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_mod_cliente" />

        <EditText
            android:id="@+id/etCliente_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />



        <TextView
            android:id="@+id/tvEmpresa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empresa_mod_cliente" />

        <EditText
            android:id="@+id/etCliente_empresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <Button
            android:id="@+id/btn_modificarCli"
            style="@style/btnStyleOrange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_modif_mod_cliente" />

        <Button
            android:id="@+id/btn_eliminarCli"
            style="@style/btnStyleOrange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_elim_mod_cliente" />

    </LinearLayout>


